Add OpenGraph image

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Informaticapau">
     <meta property="og:description" content="Comunidad de informática orientada a estudiantes y principiantes.">
-    <meta property="og:image" content="https://www.informaticapau.com/img/ipau/logo_cuadrado.png">
+    <meta property="og:image" content="https://iptool.informaticapau.com/img/og.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
