--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,16 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Informaticapau">
     <meta property="og:description" content="Comunidad de informática orientada a estudiantes y principiantes.">
-    <meta property="og:image" content="https://iptool.informaticapau.com/img/og.png">
+    <meta property="og:image" content="https://informaticapau.com/IP-Tool/img/og.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon & title -->
-    <link rel="icon" type="image/x-icon" href="https://www.informaticapau.com/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://informaticapau.com/static/img/favicon.ico">
     <title>IP Tool | By @informaticapau</title>
 
     <!-- Style -->
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" type="text/css" href="https://informaticapau.com/static/css/layout/layout.css">
     <link rel="stylesheet" href="./css/ip-tool.css">
 
     <!-- Scripts -->
@@ -31,14 +30,21 @@
 
     <!-- Header -->
     <header>
-        <a href="https://www.informaticapau.com/">
-            <img id="logo" src="https://www.informaticapau.com/favicon.ico" alt="Logo">
+        <a href="/">
+            <img id="logo" src="https://informaticapau.com/static/img/ipau/logo_circulo.png" alt="Logo">
         </a>
-        <a href="https://www.informaticapau.com/">
-            <img id="webname" src="https://www.informaticapau.com/img/ipau/tag.png" alt="@informaticapau">
+        <a href="/">
+            <img id="webname" src="https://informaticapau.com/static/img/ipau/tag.png" alt="@informaticapau">
         </a>
     </header>
 
+    <!-- Nav -->
+    <nav>
+        <a class="nav-link" href="https://informaticapau.com/home">Home</a>
+        <a class="nav-link" href="https://informaticapau.com/hacking">Hacking</a>
+        <a class="nav-link" href="https://informaticapau.com/social">Redes sociales</a>
+        <a class="nav-link" href="https://informaticapau.com/webrings">Webrings</a>
+    </nav>
 
     <!-- Main -->
     <main>
@@ -140,10 +146,12 @@
 
     <!-- Footer -->
     <footer id="footer">
-        <span>© 2024 Todos los derechos reservados.</span>
-        <span>Página desarrollada por <a href="https://github.com/danielfeitopin">Daniel Feito</a>.</span>
-        <span>Contacto: <a href="mailto:informaticapau@pm.me">informaticapau@pm.me</a> .</span>
-     </footer>
+        <div>© 2024 Todos los derechos reservados.</div>
+        <div>Página desarrollada por <a href="https://www.linkedin.com/in/danielfeitopin/">Daniel Feito Pin</a>.</div>
+        <div>Contacto: <a id="email"
+                href="#"><span>informaticapau</span><!----><span>&#64;</span><!----><span>pm.me</span></a> .</div>
+        <script src="https://informaticapau.com/static/js/email_protector.js"></script>
+    </footer>
 
 </body>
 
